<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JsonMaker Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="number">Contact Number</string>
    <string name="age">Age</string>

</resources>